# bootstrap-academy-productive-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml  dev.yml  release.yml
app/: .env.example  config.py  main.py
junit/: test-results.xml
tests/: test_config.py
